# codecrafters-shell-rust

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: builtins.rs  command.rs  config.rs  executables.rs  external.rs  history.rs  lib.rs  main.rs  parse.rs  pipeline.rs  rline.rs  state.rs  token.rs
