[package]
name = "craft-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[lib]
name = "shlib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
os_pipe = "1.2.3"
strum = { version = "0.27.2", features = ["derive"] }
termion = "4.0.6"
is_executable = "1.0.5"
